# semantic-resume-ranking-system

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: architecture.md  interview_guide.md
src/: service.py
src/config/: settings.py
src/document_processing/: extractor.py  sectioner.py
src/domain/: models.py
src/embeddings/: encoder.py
src/llm/: groq_requirements.py
src/ranking/: matcher.py  scorer.py
src/reporting/: pdf_report.py
src/search/: faiss_index.py
src/utils/: text.py
tests/: test_groq_requirements.py  test_matcher.py  test_scoring_helpers.py  test_sectioner.py
