[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-resume-ranking-system"
version = "1.0.0"
description = "Explainable, section-aware semantic resume ranking using Groq, Sentence Transformers, FAISS, and Streamlit."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Khushi Bawistale"}]
dependencies = [
  "streamlit>=1.49,<2",
  "groq>=0.31,<1",
  "sentence-transformers>=5.0,<6",
  "faiss-cpu>=1.11,<2",
  "pymupdf>=1.26,<2",
  "python-docx>=1.2,<2",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "reportlab>=4.4,<5"
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9", "ruff>=0.12,<1", "mypy>=1.17,<2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
